# proprietor

./: .env.example  .gitattributes  .gitignore  DEMO_SCRIPT.md  README.md  SETUP.md  SUBMISSION.md  claude.session  demo.sh  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
.demo-pids/: demo-server.pid  engine.pid  storefront.pid  supplier.pid
.ilnamiquiliatsaa/: config.json  project.toml  tsaa
cfo/: agent.test.ts  agent.ts  circle-tools.ts  config.ts  fulfiller.test.ts  fulfiller.ts  gate.test.ts  gate.ts  ledger-cli.ts  main.ts  processor.test.ts  processor.ts  read-view.test.ts  read-view.ts  reprice-cycle.test.ts  reprice.ts  repricer.test.ts  repricer.ts  test-setup.ts
clippy.config/: README.md  extensions.enabled  lenses.md  models
engine/: .env.example  .gitignore  README.md  pyproject.toml
engine/app/: clients.py  cost_meter.py  disambiguation.py  main.py  models.py  normalize.py  researcher.py  settings.py  store.py
engine/tests/: conftest.py  fakes.py  test_cache.py  test_cost_meter.py  test_depth_gating.py  test_disambiguation.py  test_live_integration.py  test_query_clamp.py  test_schema.py
ledger/: ledger.test.ts  ledger.ts
lib/: env.ts
money/: README.md  deploy.ts  echo-seller.ts  smoke.ts  treasury.test.ts  treasury.ts  x402-seller.test.ts  x402-seller.ts
scripts/: cfo-demo.ts  demo-server.mjs  live-verify.sh
storefront/: engine-client.ts  fulfiller.ts  pricing.ts  receipt.ts  server.ts  storefront.test.ts
supplier/: engine-client.ts  research-seller.test.ts  research-seller.ts  wholesale.ts
(+9 files in other folders)
